<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".ui.register.RegisterFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/l"
            android:textSize="@dimen/l"
            android:textStyle="bold"
            android:text="@string/sign_up" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:layout_marginHorizontal="@dimen/m"
            android:paddingVertical="@dimen/s"
            android:paddingStart="@dimen/xs"
            android:paddingEnd="@dimen/xs"
            android:gravity="center">

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:layout_marginStart="@dimen/s"
            android:layout_marginEnd="@dimen/m"
            android:layout_marginTop="@dimen/m"
            android:padding="@dimen/s"
            android:background="@drawable/input_box"/>

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:layout_marginStart="@dimen/s"
            android:layout_marginEnd="@dimen/m"
            android:layout_marginTop="@dimen/m"
            android:padding="@dimen/s"
            android:background="@drawable/input_box"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginStart="@dimen/s"
            android:layout_marginEnd="@dimen/m"
            android:layout_marginTop="@dimen/m"
            android:padding="@dimen/s"
            android:background="@drawable/input_box"/>

        <EditText
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/xs"
            android:layout_marginEnd="@dimen/m"
            android:layout_marginTop="@dimen/m"
            android:padding="@dimen/s"
            android:background="@drawable/input_box"
            android:hint="@string/password"/>

        <EditText
            android:id="@+id/etConfirmPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/xs"
            android:layout_marginEnd="@dimen/m"
            android:layout_marginTop="@dimen/m"
            android:padding="@dimen/s"
            android:background="@drawable/input_box"
            android:hint="@string/confirm_password"/>

        <Spinner
            android:id="@+id/etRole"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/xs"
            android:layout_marginEnd="@dimen/m"
            android:layout_marginTop="@dimen/m"
            android:padding="@dimen/s"
            android:spinnerMode="dropdown"
            android:background="@drawable/input_box"
            android:entries="@array/role_options"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/xs"
            android:layout_marginEnd="@dimen/m"
            android:layout_marginTop="@dimen/l"
            android:padding="@dimen/xs"
            android:text="@string/register"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:minHeight="36dp"
            app:cornerRadius="20dp"/>
        </LinearLayout>
    </LinearLayout>
</layout>
