<?xml version="1.0" encoding="utf-8"?>
<layout>
    <com.google.android.material.card.MaterialCardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/cvQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:layout_margin="8dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvQuizQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_question"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="@color/black"
                android:layout_marginBottom="16dp"
                tools:text="Question 1: What is Android?" />

            <TextView
                android:id="@+id/tvQuizOptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_options"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="@color/black"
                android:layout_marginBottom="16dp"
                tools:text="A. Option A\nB. Option B\nC. Option C" />

            <TextView
                android:id="@+id/tvQuizAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correct_answer"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="@color/black"
                tools:text="Correct Answer: A" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</layout>
